# LeafDeaseasedetection

./: .replit  PRESENTATION.md  analysis.py  app.py  comprehensive_analysis.py  comprehensive_image_test.py  comprehensive_test.py  create_detailed_summary.py  debug_uploads.py  download_by_files.py  download_dataset.py  download_images_efficient.py  download_kaggle_dataset.py  download_smaller_dataset.py  download_test_images.py  final_correct_training.py  final_download.py  final_training_log.txt  generate_test_images.py  generate_training_data.py  inspect_image.py  inspect_wrong_images.py  models.py  organize_images.py  prepare_improved_dataset.py  pyproject.toml  quick_retrain.py  quick_retrain_log.txt  quick_train.py  quick_training_log.txt  replit.md  retrain_improved_model.py  retrain_log.txt  retrain_model.py  setup_kaggle.py  test_diseased.py  test_fixed_analysis.py  test_full_xyz.py  test_model_accuracy.py  test_multiple.py  (+7 more)
attached_assets/: Pasted-I-have-an-existing-plant-leaf-disease-detection-project-that-currently-uses-color-based-detection-w-1761926941838_1761926941839.txt
instance/: plant_disease.db
models/: class_mapping.txt
static/css/: style.css
static/js/: main.js
templates/: base.html  history.html  index.html  login.html  presentation.html  register.html  result.html
uploads/: .gitkeep
