[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "kaggle>=1.7.4.5",
    "keras>=3.12.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
    "werkzeug>=3.1.3",
]
